# Prompt-Injection-Scanner

./: .env  .github  .gitignore  .pylintrc  COMMIT_MESSAGE.txt  README.md  SECURITY.md  __init__.py  cli.py  llm_classifier.py  patterns.py  pyproject.toml  requirements.txt  scanner.py  scorer.py  security_verification.py  test_security_modules.py  test_validation.py
api/: main.py  run.py  security_audit.py  security_logging.py  security_ssrf.py  security_validation.py
plans/: OWASP_SECURITY_HARDENING_PLAN.md
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/history/: HistoryRow.tsx  HistoryTable.tsx
web/src/components/layout/: ApiKeyModal.tsx  Navbar.tsx  OnboardingModal.tsx  PageWrapper.tsx  Sidebar.tsx
web/src/components/scanner/: PromptInput.tsx  ResultCard.tsx  ScanButton.tsx  StageProgress.tsx  VerdictBadge.tsx
web/src/components/ui/: badge.tsx  card.tsx  skeleton.tsx
web/src/hooks/: useScanner.ts  useWebSocket.ts
web/src/lib/: api.ts
web/src/pages/: HistoryPage.tsx  HowItWorksPage.tsx  NotFoundPage.tsx  PatternsPage.tsx  ScannerPage.tsx
web/src/store/: useHistoryStore.ts  useStore.ts
web/src/types/: api.types.ts
